k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-devops-dashboard
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-devops-dashboard
  template:
    metadata:
      labels:
        app: aws-devops-dashboard
    spec:
      containers:
      - name: dashboard
        image: minhtri2582/aws-devops:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        livenessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
      volumes:
      - name: tmp
        emptyDir: {}
